/* BUILD
protoc --proto_path=src/proto --proto_path=C:\Users\samda\go\src --go_out=plugins=grpc:src/proto .\src\proto\services\game_server\game_server.proto
*/

syntax = "proto3";

import "github.com/sambdavidson/community-chess/src/proto/messages/game.proto";
import "github.com/sambdavidson/community-chess/src/proto/messages/vote.proto";

package game_server;

service GameServer {
    rpc GetGame (GetGameRequest) returns (GetGameResponse);
    rpc GetGameMetadata (GetGameMetadataRequest) returns (GetGameMetadataResponse);
    rpc GetGameState (GetGameStateRequest) returns (GetGameStateResponse);
    rpc GetGameHistory (GetGameHistoryRequest) returns (GetGameHistoryResponse);
    rpc Join (JoinRequest) returns (JoinResponse);
    rpc Leave (LeaveRequest) returns (LeaveResponse);
    rpc PostVote (PostVoteRequest) returns (PostVoteResponse);
}

message GetGameRequest {
    // Whether to include comprehensive data-intensive lists of players and
    // the like. This is meant to allow for lightweight frequent RPCs but
    // detailed data-ful RPCs when needed by either clients or internal services.
    bool detailed = 1;
}

message GetGameResponse {
    messages.Game game = 1;
}

message GetGameMetadataRequest {}

message GetGameMetadataResponse {
    // The metadata of the game.
    messages.Game.Metadata metadata = 1;
}

message GetGameStateRequest {
    // Whether to include comprehensive data-intensive lists of players and
    // the like. This is meant to allow for lightweight frequent RPCs but
    // detailed data-ful RPCs when needed by either clients or internal services.
    bool detailed = 1;
}

message GetGameStateResponse {
    messages.Game.State state = 1;
}

message GetGameHistoryRequest {
    // Whether to include comprehensive data-intensive lists of players and
    // the like. This is meant to allow for lightweight frequent RPCs but
    // detailed data-ful RPCs when needed by either clients or internal services.
    bool detailed = 1;
}

message GetGameHistoryResponse {
    messages.Game.History history = 1;
}

message JoinRequest {
    messages.Game.NewPlayerFields fields = 1;
}

message JoinResponse {}

message LeaveRequest {}

message LeaveResponse {}

message PostVoteRequest {
    messages.Vote vote = 1;
}

message PostVoteResponse {}